fix deprecated option